# data-learning

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: batching.md  star-schema-vs-snowflake.md  star-schema.md
src/: ingest.py  model.py  query.py  store.py
src/data_learning/: __init__.py  common.py  ingest_stage.py  model_stage.py  query_stage.py  store_stage.py
tests/: helpers.py  test_ingest.py  test_model.py  test_pipeline_smoke.py  test_query.py  test_store.py
