[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-learning"
version = "0.1.0"
description = "Minimal tracer-bullet data pipeline for learning data engineering concepts."
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "duckdb>=0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "fastavro>=1.9",
  "ijson>=3.2",
  "pyarrow>=14.0",
  "plotly>=5.18",
  "streamlit>=1.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
